# pictl

./: CLI.md  README.md  install.sh  pictl.py  pyproject.toml  requirements.txt  shim.py
.github/workflows/: ci.yml
lib/: doctor.py  errors.py  pats.py  repos.py  sessions.py  stats.py  storage.py  version.py
systemd/: pictl-shim.service
tests/: conftest.py  test_doctor.py  test_pats.py  test_repos.py  test_sessions.py  test_stats.py  test_storage.py
